change tab mechanism from hide to shift off-screen so that charts are rendered correctly in FF

--- a/web-app/css/public.css
+++ b/web-app/css/public.css
@@ -46,6 +46,8 @@ a.current {
     -moz-border-radius: 0 !important; /* FF1+ */
     -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
     border-radius: 0 !important; /* Opera 10.5, IE 9 */
+    -icab-border-radius: 0;
+    -khtml-border-radius: 0;
     padding-bottom: 5px;
 }
 
@@ -172,6 +174,14 @@ ul.taxaBreakdown input {
     margin: 10px 0 5px 0;
     padding: 5px 5px 5px 30px
 }
+/* tabs */
+.hide,.ui-tabs-hide, #nav-footer{
+    display:block !important;
+    position: absolute;
+    left: -10000px;
+}
+
+/*  charts */
 
 div.distributionImage {
     margin-left: 10px;
@@ -282,6 +292,7 @@ div#decadeChart {
     position: relative;
     margin-top: -100px;
     z-index: 20;
+    width: 600px;
 }
 
 div#decadeChartCaption {
@@ -323,6 +334,8 @@ img.no-radius {
     -moz-border-radius: 0 !important; /* FF1+ */
     -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
     border-radius: 0 !important; /* Opera 10.5, IE 9 */
+    -icab-border-radius: 0;
+    -khtml-border-radius: 0;
 }
 
 /* stop rounding of map tiles */
@@ -330,6 +343,8 @@ img.no-radius {
     -moz-border-radius: 0 !important; /* FF1+ */
     -webkit-border-radius: 0 !important; /* Saf3+, Chrome */
     border-radius: 0 !important; /* Opera 10.5, IE 9 */
+    -icab-border-radius: 0;
+    -khtml-border-radius: 0;
 }
 /* for percent records progress bar */
 
